gccida/c2/subreg_hard_regno
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subreg_hard_regno/src/emit-rtl.c:1258:52: error: use of undeclared identifier 'machine_mode'
if ( check_mode && !ix86_hard_regno_mode_ok( v5, ( machine_mode)( unsigned __int8)BYTE2( *rtwint)) ) 
                                                   ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subreg_hard_regno/src/emit-rtl.c:1258:67: error: expected expression
if ( check_mode && !ix86_hard_regno_mode_ok( v5, ( machine_mode)( unsigned __int8)BYTE2( *rtwint)) ) 
                                                                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/subreg_hard_regno/src/obj/emit-rtl.o] Error 1
